# webserver_2.0

./: .gitignore  2026_04_10_ServerLog  CMakeLists.txt  README.md  blockqueue.h  build.sh  main.cpp  server  web_server.cpp  web_server.h
docs/: architecture.md
http_conn/: http_conn.cpp  http_conn.h
lock/: lock.h
log/: log.cpp  log.h
mysql/: sql_connection_pool.cpp  sql_connection_pool.h
test/: test_block_queue  test_block_queue.cpp  test_env  test_env.cpp  test_locker  test_locker.cpp  test_log  test_log.cpp  test_mysql  test_mysql.cpp  test_sql__pool.cpp  test_sql_pool  test_threadpool  test_threadpool.cpp  test_timer  test_timer.cpp
threadpool/: threadpool.h
timer/: lst_timer.cpp  lst_timer.h
